# pwrusb

./: .goreleaser.yml  Cargo.toml
.github/workflows/: ci.yml
src/: main.rs
